--- a/scss/_variables-override.scss
+++ b/scss/_variables-override.scss
@@ -6,7 +6,7 @@
 // Color variables------------------------
 $primary: #F3E9F1;
 $secondary: #B36F98;
-
+$info: #8F5BFE;
 
 
 // Card variables------------------------
