--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
   --primary: #F3E9F1;
   --secondary: #B36F98;
   --success: #28a745;
-  --info: #17a2b8;
+  --info: #8F5BFE;
   --warning: #ffc107;
   --danger: #dc3545;
   --light: #f8f9fa;
@@ -1758,21 +1758,21 @@ pre code {
 .table-info,
 .table-info > th,
 .table-info > td {
-  background-color: #bee5eb;
+  background-color: #e0d1ff;
 }
 .table-info th,
 .table-info td,
 .table-info thead th,
 .table-info tbody + tbody {
-  border-color: #86cfda;
+  border-color: #c5aafe;
 }
 
 .table-hover .table-info:hover {
-  background-color: #abdde5;
+  background-color: #cfb8ff;
 }
 .table-hover .table-info:hover > td,
 .table-hover .table-info:hover > th {
-  background-color: #abdde5;
+  background-color: #cfb8ff;
 }
 
 .table-warning,
@@ -2512,32 +2512,32 @@ fieldset:disabled a.btn {
 
 .btn-info {
   color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+  background-color: #8F5BFE;
+  border-color: #8F5BFE;
 }
 .btn-info:hover {
   color: #fff;
-  background-color: #138496;
-  border-color: #117a8b;
+  background-color: #7535fe;
+  border-color: #6c28fe;
 }
 .btn-info:focus, .btn-info.focus {
   color: #fff;
-  background-color: #138496;
-  border-color: #117a8b;
-  box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+  background-color: #7535fe;
+  border-color: #6c28fe;
+  box-shadow: 0 0 0 0.2rem rgba(160, 116, 254, 0.5);
 }
 .btn-info.disabled, .btn-info:disabled {
   color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+  background-color: #8F5BFE;
+  border-color: #8F5BFE;
 }
 .btn-info:not(:disabled):not(.disabled):active, .btn-info:not(:disabled):not(.disabled).active, .show > .btn-info.dropdown-toggle {
   color: #fff;
-  background-color: #117a8b;
-  border-color: #10707f;
+  background-color: #6c28fe;
+  border-color: #641cfe;
 }
 .btn-info:not(:disabled):not(.disabled):active:focus, .btn-info:not(:disabled):not(.disabled).active:focus, .show > .btn-info.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(160, 116, 254, 0.5);
 }
 
 .btn-warning {
@@ -2736,28 +2736,28 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-info {
-  color: #17a2b8;
-  border-color: #17a2b8;
+  color: #8F5BFE;
+  border-color: #8F5BFE;
 }
 .btn-outline-info:hover {
   color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+  background-color: #8F5BFE;
+  border-color: #8F5BFE;
 }
 .btn-outline-info:focus, .btn-outline-info.focus {
-  box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(143, 91, 254, 0.5);
 }
 .btn-outline-info.disabled, .btn-outline-info:disabled {
-  color: #17a2b8;
+  color: #8F5BFE;
   background-color: transparent;
 }
 .btn-outline-info:not(:disabled):not(.disabled):active, .btn-outline-info:not(:disabled):not(.disabled).active, .show > .btn-outline-info.dropdown-toggle {
   color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+  background-color: #8F5BFE;
+  border-color: #8F5BFE;
 }
 .btn-outline-info:not(:disabled):not(.disabled):active:focus, .btn-outline-info:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-info.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(143, 91, 254, 0.5);
 }
 
 .btn-outline-warning {
@@ -4711,15 +4711,15 @@ a.badge-success:focus, a.badge-success.focus {
 
 .badge-info {
   color: #fff;
-  background-color: #17a2b8;
+  background-color: #8F5BFE;
 }
 a.badge-info:hover, a.badge-info:focus {
   color: #fff;
-  background-color: #117a8b;
+  background-color: #6c28fe;
 }
 a.badge-info:focus, a.badge-info.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(143, 91, 254, 0.5);
 }
 
 .badge-warning {
@@ -4857,15 +4857,15 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-info {
-  color: #0c5460;
-  background-color: #d1ecf1;
-  border-color: #bee5eb;
+  color: #4a2f84;
+  background-color: #e9deff;
+  border-color: #e0d1ff;
 }
 .alert-info hr {
-  border-top-color: #abdde5;
+  border-top-color: #cfb8ff;
 }
 .alert-info .alert-link {
-  color: #062c33;
+  color: #35225e;
 }
 
 .alert-warning {
@@ -5204,17 +5204,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-info {
-  color: #0c5460;
-  background-color: #bee5eb;
+  color: #4a2f84;
+  background-color: #e0d1ff;
 }
 .list-group-item-info.list-group-item-action:hover, .list-group-item-info.list-group-item-action:focus {
-  color: #0c5460;
-  background-color: #abdde5;
+  color: #4a2f84;
+  background-color: #cfb8ff;
 }
 .list-group-item-info.list-group-item-action.active {
   color: #fff;
-  background-color: #0c5460;
-  border-color: #0c5460;
+  background-color: #4a2f84;
+  border-color: #4a2f84;
 }
 
 .list-group-item-warning {
@@ -6065,13 +6065,13 @@ button.bg-success:focus {
 }
 
 .bg-info {
-  background-color: #17a2b8 !important;
+  background-color: #8F5BFE !important;
 }
 
 a.bg-info:hover, a.bg-info:focus,
 button.bg-info:hover,
 button.bg-info:focus {
-  background-color: #117a8b !important;
+  background-color: #6c28fe !important;
 }
 
 .bg-warning {
@@ -6175,7 +6175,7 @@ button.bg-dark:focus {
 }
 
 .border-info {
-  border-color: #17a2b8 !important;
+  border-color: #8F5BFE !important;
 }
 
 .border-warning {
@@ -9750,11 +9750,11 @@ a.text-success:hover, a.text-success:focus {
 }
 
 .text-info {
-  color: #17a2b8 !important;
+  color: #8F5BFE !important;
 }
 
 a.text-info:hover, a.text-info:focus {
-  color: #0f6674 !important;
+  color: #5b0ffe !important;
 }
 
 .text-warning {
@@ -9940,6 +9940,17 @@ h3 {
 
 .btn-primary:hover, .btn-primary:focus {
   color: #8c4a72;
+}
+
+th {
+  color: #B36F98;
+}
+
+.fa-trash-alt {
+  color: #F3E9F1;
+}
+.fa-trash-alt:hover {
+  color: #B36F98;
 }
 
 footer a {
