--- a/scss/style-redefined.scss
+++ b/scss/style-redefined.scss
@@ -17,18 +17,22 @@ font-weight: 700;
     color: darken($color: $secondary, $amount: 15);
 }
 
+//---Panier.html---------------
 th {
     color: $secondary
 }
 
-
 .fa-trash-alt {
-    color: $primary;
+    color: $secondary;
     &:hover {
-        color: $secondary;
+        color: $primary;
     }
 }
 
+.feedback {
+    background-color: $primary;
+    color: $secondary;
+}
 
 // Footer ---------------------------
 footer a {
