Display order validation, remove item from cart
display the order validation page with the order number, remove an item from the cart 'onClick'

--- a/scss/style-redefined.scss
+++ b/scss/style-redefined.scss
@@ -18,9 +18,11 @@ font-weight: 700;
 }
 
 //---Panier.html---------------
-th {
-    color: $secondary
+thead {
+    color: $secondary;
+    background-color: $primary;
 }
+
 
 .fa-trash-alt {
     color: $secondary;
