--- a/scss/style-redefined.scss
+++ b/scss/style-redefined.scss
@@ -7,7 +7,7 @@ font-size: large;
 font-weight: 700;
 }
 
-// Page d'acceuil------------------
+//---Page d'acceuil------------------
 .btn-primary{
     color: $secondary;
     font-weight: bold;
@@ -17,18 +17,31 @@ font-weight: 700;
     color: darken($color: $secondary, $amount: 15);
 }
 
-//---Panier.html---------------
+//---Page produit--------------
+#quantity {
+    width:40px;
+    height: 30px;
+}
+
+#moreButton, #minusButton {
+    font-size: 20px;
+}
+
+//---Page panier---------------
 thead {
     color: $secondary;
     background-color: $primary;
 }
-
 
 .fa-trash-alt {
     color: $secondary;
     &:hover {
         color: $primary;
     }
+}
+
+.input-quantity {
+    width: 30px;
 }
 
 .feedback {
