--- a/scss/style-redefined.scss
+++ b/scss/style-redefined.scss
@@ -44,10 +44,10 @@ thead {
     width: 30px;
 }
 
-.feedback {
-    background-color: $primary;
-    color: $secondary;
-}
+// .feedback {
+//     background-color: $primary;
+//     color: $secondary;
+// }
 
 // Footer ---------------------------
 footer a {
